--- a/style.css
+++ b/style.css
@@ -25,3 +25,121 @@ body{
     overflow: hidden;
     color: #ddd;
 }
+
+.music-name,
+.artist-name{
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.music-name{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.artist-name{
+    font-size: 20px;
+}
+
+.disk{
+    position: relative;
+    display: block;
+    margin: 40px auto;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background-image: url('/home/wtc/musicPlayer/index.png');
+    background-size: cover;
+    box-shadow: 0 0 0 10px rgb(255, 255, 225, 0.08);
+}
+
+.disk::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    width: 30%;
+    height: 30%;
+    border-radius: 50%;
+    background-color: #5c66f8;
+}
+
+.song-slider{
+    width: 100%;
+    position: relative;
+}
+
+.seek-bar{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    border-radius: 10px;
+    background: #2332fc;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.seek-bar::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 1px;
+    height: 20px;
+    background: #ddd;
+    box-shadow: -400px 0 0 400px rgb(5, 5, 5);
+
+}
+
+.current-time,
+.song-duration{
+    font-size: 14px;
+}
+
+.song-duration{
+    position: absolute;
+    right: 0;
+}
+
+.controls{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.play-button{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #ddd;
+    cursor: pointer;
+    border: none;
+   
+}
+
+
+.play-button span{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 30px;
+    border-radius: 2px;
+    background: #5c66f8;
+    transition: .5s;
+}
+
+.play-button span:nth-child(2){
+    left: 55%;
+    transform-origin: center;
+}
+
+/* .play-button span:nth-child(2) {
+    transform: translateY(-50% ) scaleY(0);
+} */
+
+
